--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 android {
     compileSdkVersion 31
     buildToolsVersion "30.0.3"
-
+    androidResources
     defaultConfig {
         applicationId "com.example.imagesphereconversion"
         minSdkVersion 17
